--- a/webapp/package.json
+++ b/webapp/package.json
@@ -24,8 +24,13 @@
     "@popperjs/core": "^2.10.2",
     "aws-amplify": "^4.3.20",
     "file-saver": "^2.0.5",
+    "resolve-url": "^0.2.1",
     "rxjs": "~7.5.0",
+    "source-map-resolve": "^0.6.0",
+    "source-map-url": "^0.4.1",
     "tslib": "^2.3.0",
+    "urix": "^0.1.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
