--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "webapp",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,43 +10,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.8",
-    "@angular/cdk": "^14.2.6",
-    "@angular/common": "^14.2.8",
-    "@angular/compiler": "^14.2.8",
-    "@angular/core": "^14.2.8",
-    "@angular/forms": "^14.2.8",
-    "@angular/localize": "^14.2.8",
-    "@angular/material": "^14.2.6",
-    "@angular/platform-browser": "^14.2.8",
-    "@angular/platform-browser-dynamic": "^14.2.8",
-    "@angular/router": "^14.2.8",
-    "@popperjs/core": "^2.10.2",
-    "aws-amplify": "^4.3.20",
+    "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.1",
+    "@angular/common": "^15.2.0",
+    "@angular/compiler": "^15.2.0",
+    "@angular/core": "^15.2.0",
+    "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.1",
+    "@angular/platform-browser": "^15.2.0",
+    "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/router": "^15.2.0",
     "file-saver": "^2.0.5",
-    "ngx-cookie-service": "^14.0.1",
-    "resolve-url": "^0.2.1",
-    "rxjs": "~7.5.0",
-    "source-map-resolve": "^0.6.0",
-    "source-map-url": "^0.4.1",
+    "ngx-cookie-service": "^15.0.0",
+    "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "urix": "^0.1.0",
-    "uuid": "^9.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.7",
-    "@angular/cli": "^14.2.7",
-    "@angular/compiler-cli": "^14.2.8",
+    "@angular-devkit/build-angular": "^15.2.1",
+    "@angular/cli": "~15.2.1",
+    "@angular/compiler-cli": "^15.2.0",
     "@types/file-saver": "^2.0.5",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.9.4"
   }
 }
